ECA-1468: Moved XKMS and XMKS CLI to modules.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@8290 37aeb1de-b14b-0410-9a0e-82b28170d228